# nicecrud

./: .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md  i.js  pyproject.toml  pytest.ini  test-versions.sh
.github/: copilot-instructions.md
.specify/memory/: constitution.md
examples/: database.py  input_choices.py  integration_example.py  issue_15_reproduction.py  list_fields.py  list_of_models.py  markdown_field.py  minimal.py  nested_lists.py  pathminimal.py  repro_multiple_cards.py  select_options.py  submodel.py  validation.py
nicecrud/: __init__.py  basemodel_to_table.py  error.py  nicecrud.py  show_error.py
niceguicrud/: __init__.py  basemodel_to_table.py  nicecrud.py  show_error.py
niceguicrud/input_handlers/: __init__.py  base.py  boolean.py  collections.py  nested.py  numeric.py  selection.py  string.py  temporal.py
specs/001-modular-input/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-modular-input/checklists/: requirements.md
specs/001-modular-input/contracts/: input-handler-protocol.md  registry-api.md
tests/: test_basemodellist.py  test_config.py  test_examples_import.py  test_issue_15_comprehensive.py  test_issue_15_optional_nested.py  test_nicecrud.py
tests/integration/: test_handler_registry.py
tests/playwright/: README.md  conftest.py  test_input_choices.py  test_issue_15_ui.py  test_minimal_example.py  test_validation.py
tests/unit/: test_input_handlers.py
