[project]
name = "niceguicrud"
version = "0.1.11"
description = "Edit your pydantic models with a nice GUI - CRUD Create Update Replace Delete"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "nicegui>=3.0.0",
  "pydantic>=2.8.0",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[[project.authors]]
name = "Dronakurl"
email = "tbo73oij5@mozmail.com"

[tool.uv]
dev-dependencies = ["pytest", "pytest-asyncio", "pre-commit", "playwright", "pytest-playwright"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "--ignore=.archiv",
  "--ignore=scripts",
  "--no-header",
]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.playwright]
browsers = ["chromium"]

[tool.ruff]
line-length = 100
exclude = ["**/__init__.py"]

[tool.black]
line-length = 100
